# s3-Vectors

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  cloud_security.txt  docker-compose.yml  pyproject.toml  sample_proposal.txt  streamlit_app.py  test_document.txt
data/vector_store/: metadata.json  vectors.pkl
scripts/: setup.sh
src/api/: main.py  models.py
src/core/: config.py  document_processor.py  embeddings.py  rag_engine.py  vector_store.py
