[tool.poetry]
name = "s3-vectors-sales-rag"
version = "0.1.0"
description = "営業提案資料作成のためのRAGシステム - Amazon S3 Vectorsを活用"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
boto3 = "^1.34.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.0"
python-dotenv = "^1.0.0"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
pypdf = "^3.17.0"
docx2txt = "^0.8"
pandas = "^2.1.0"
numpy = "^1.26.0"
streamlit = "^1.29.0"
openai = "^1.6.0"
anthropic = "^0.8.0"
tiktoken = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.12.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true